--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,5 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
 
     implementation project(path: ':main')
+    implementation project(path: ':thongbao')
 }
