--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,5 @@ dependencies {
     implementation 'info.androidhive:fontawesome:0.0.5'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
-
-    implementation project(path: ':main')
-    implementation project(path: ':thongbao')
+    implementation 'com.google.android.material:material:1.0.0'
 }
