--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,11 @@
 
         <activity android:name=".LoginActivity">
         </activity>
+
+        <activity
+            android:theme="@style/AppTheme_Main"
+            android:name=".main.MainActivity">
+        </activity>
     </application>
 
 
