--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-savedstate:1.0.0-alpha01'
 
 }
