--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
     package="com.khoa.myptit">
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -18,9 +17,21 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:targetApi="m">
         <activity
-            android:theme="@style/AppTheme_Main"
-            android:name=".thongbao.view.ChiTietThongBaoActivity">
+            android:name=".xemdiem.view.XemDiemActivity"
+            android:theme="@style/AppTheme_Main">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
+        <activity
+            android:name=".xemhocphi.view.XemHocPhiActivity"
+            android:theme="@style/AppTheme_Main">
+        </activity>
+        <activity
+            android:name=".thongbao.view.ChiTietThongBaoActivity"
+            android:theme="@style/AppTheme_Main"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,11 +39,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".login.LoginActivity"></activity>
+        <activity android:name=".login.LoginActivity" />
         <activity
             android:name=".main.MainActivity"
-            android:theme="@style/AppTheme_Main"></activity>
+            android:theme="@style/AppTheme_Main" />
     </application>
-
 
 </manifest>
